--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>    
+    <h1>Odin Recipes</h1>
+    <a href="recipes/lobsterthermidor.html">Lobster Thermidor</a>
   </body>
 </html>
