Add Steps header on Lobster Thermidorpage

--- a/recipes/lobsterthermidor.html
+++ b/recipes/lobsterthermidor.html
@@ -24,6 +24,7 @@
       <li>2 teaspoons freshly grated Parmigiano-Reggiano cheese</li>
       <li>2 teaspoons melted butter</li>
     </ul>
+    <h2>Steps</h2>
     <ol>
       <li>Cut bottom shell of lobster tails using kitchen shears along each side where it meets the top shell; do not remove the shell at this point.</li>
       <li>Melt 2 tablespoons butter in a skillet over medium-high heat. Place lobster tails cut side down in the butter. Cook, covered, about 3 minutes. Turn lobster tails over (they are curved so will lean to 1 side); cover and cook 1 minute. Lean them to the other side; cover and cook 1 minute more.</li>
