Add Steps header to Pea Soup page

--- a/recipes/black-eyedpeasoup.html
+++ b/recipes/black-eyedpeasoup.html
@@ -27,6 +27,7 @@
       <li>¼ teaspoon ground black pepper</li>
       <li>¼ teaspoon ground cumin</li>
     </ul>
+    <h2>Steps</h2>
     <ol>
       <li>Heat a Dutch oven over medium heat. Cook and stir pork sausage, ground beef, and onion in the hot pot until meat is no longer pink, 10 to 12 minutes; drain off excess fat. Pour in water, then stir in black-eyed peas, diced tomatoes, tomatoes with green chiles, canned green chilies, beef bouillon cubes, molasses, Worcestershire sauce, garlic salt, salt, black pepper, and cumin until thoroughly mixed.</li>
       <li>Bring soup to a boil; reduce heat, cover, and simmer for 45 minutes.</li>
