--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/lobsterthermidor.html">Lobster Thermidor</a>
     <a href="recipes/black-eyedpeasoup.html">Black-Eyed Pea Soup</a>
+    <a href="recipes/cheese-fondue.html">Cheese Fondue</a>
   </body>
 </html>
