Order links on main page

--- a/recipes/black-eyedpeasoup.html
+++ b/recipes/black-eyedpeasoup.html
@@ -10,6 +10,7 @@
     <img src="https://www.allrecipes.com/thmb/tkcmTzUJ5ZzdUCxlkOHz8OAh9dM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8672702-c37783b4172e4001b7495990a376c5b5.jpg">
     <h2>Description</h2>
     <p>This black-eyed pea soup is a great New Year's meal and perfect on a cold winter night. Serve this comfort food with corn bread.</p>
+    <h2>Ingredients</h2>
     <ul>
       <li>1 pound bulk pork sausage</li>
       <li>1 pound ground beef</li>
