Order links on main page properly

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <a href="recipes/lobsterthermidor.html">Lobster Thermidor</a>
-      <a href="recipes/black-eyedpeasoup.html">Black-Eyed Pea Soup</a>
-      <a href="recipes/cheese-fondue.html">Cheese Fondue</a>
+      <li><a href="recipes/lobsterthermidor.html">Lobster Thermidor</a></li>
+      <li><a href="recipes/black-eyedpeasoup.html">Black-Eyed Pea Soup</a></li>
+      <li><a href="recipes/cheese-fondue.html">Cheese Fondue</a></li>
     </ul>
   </body>
 </html>
